likedfood 기능 구현 1차 완료 / 인덱스 정리

--- a/src/main/resources/static/css/mycss.css
+++ b/src/main/resources/static/css/mycss.css
@@ -126,6 +126,11 @@
 
 /*메인 음식 리스트*/
 /*음식들 카드*/
+.foodCardList {
+    width:65%;
+    margin:auto;
+    height: 1600px;
+}
 .foodListCard {
     width:275px;
     margin:0 10px 20px 10px;
