--- a/src/main/resources/static/css/mycss.css
+++ b/src/main/resources/static/css/mycss.css
@@ -127,9 +127,9 @@
 /*메인 음식 리스트*/
 /*음식들 카드*/
 .foodCardList {
-    width:1500px;
+    width:65%;
     margin:auto;
-    height: 500px;
+    height: 1600px;
 }
 .foodListCard {
     width:275px;
@@ -694,17 +694,4 @@
 .kakao {
     background-color: #fee500;
     margin: 0;
-}
-
-.cardTheme {
-    margin: 0px auto 50px auto;
-    height: 50px;
-    width: 1500px;
-    background-color: #fd7e14;
-    text-align: center;
-    font-size: 20px;
-}
-
-.cardTheme.dropdown {
-
 }
